--- a/swiper/simple/swiper.kv
+++ b/swiper/simple/swiper.kv
@@ -14,6 +14,8 @@ MDScreen:
         pos_hint: {'top': 1}
     
     MDSwiper:
+        id: swiper
+
         # The 3 following lines are to make some spacing from the top bar
 
         size_hint_y: None
@@ -22,15 +24,26 @@ MDScreen:
 
         MySwiper:
             FitImage:
-                source: "images/image-01.jpg"
+                source: "../images/image-01.jpg"
                 radius: [20,]
         MySwiper:
             FitImage:
-                source: "images/image-02.jpg"
+                source: "../images/image-02.jpg"
                 radius: [20,]
         MySwiper:
             FitImage:
-                source: "images/image-03.jpg"
+                source: "../images/image-03.jpg"
                 radius: [20,]
         
-        
+    BoxLayout:
+        orientation:'horizontal'
+
+        MDRasedButton:
+            text: "Previouse"
+            on_release: if swiper.get_current_index() > 0: swiper.set_current(swiper.get_current_index()-1)
+
+        MDRasedButton:
+            text: "next"
+            on_release: if swiper.get_current_index() < len(swiper.get_items())-1: swiper.set_current(wsiper.get_current_index()+1)
+
+            
